data/derived/comb/progs/unify/prog2483.ml.out
Characters 69-79:
  | n -> List.hd (n mod 10)::ns;;
                 ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
